Minor Change: Removed references to an old Deprecated API and refactored a weird overloading that prevented compilation under Java 7.